# Arm_Droid

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CHARTER.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  NEXT_STEPS.md  README.md  SKILLS.md  THIRD_PARTY_NOTICES.md  coverage_output.txt  docker-compose.jetson.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  firmware-ci.yml  gpu-ci.yml
.secrets/: wifi.env.example
assets/safety/: README.md
assets/so_arm/so101/: ATTRIBUTION.md
config/: tower_of_hanoi.yaml  tower_of_hanoi_isaac.yaml  training.yaml
config/examples/: arm_ble.example.yaml  arm_tcp.example.yaml  gemini.example.yaml  openai_compat.example.yaml
docs/: GPU_BLACKWELL.md
docs/architecture/: C4.md  PHASES.md  WIRING.md  add-a-detector.md  add-a-vision-agent.md
docs/architecture/ADR/: ADR-0001-enterprise-layering.md  ADR-0002-domain-layer.md  ADR-0003-registry-pattern.md  ADR-0004-shim-deprecation.md  ADR-0005-isaac-sim-backend.md  ADR-0006-vec-env-protocol.md  ADR-0007-vision-language-agent-protocol.md  ADR-0008-open-vocabulary-detector.md  ADR-0009-safety-middleware.md
docs/deployment/: JETSON.md
docs/migration/: v0.1-to-v0.2.md
docs/plans/: isaac-e2e-implementation-plan-cobalt-meridian.md
docs/research/: isaac-omniverse-integration.md
docs/roadmap/: isaac-and-robot-integration.md
firmware/arm_esp32/: PROTOCOL.md  README.md  gen_config_pre.py  platformio.ini
firmware/arm_esp32/src/: config.h  config_generated.h  firmware.cpp  interpolator.h
scripts/: calibrate_arm.py  check_isaac_install.py  download_isaac_wheels.ps1  flash_arm_esp32.sh  gen_firmware_config.py  install_isaac_offline.ps1  jetson_health_check.py  run_hil.ps1  run_hil.sh  setup_isaac.ps1  setup_mujoco_only.ps1
src/armdroid/: __init__.py  __main__.py  _registry.py  factory.py  main.py  orchestrator.py  protocols.py
src/armdroid/api/: __init__.py  version.py
src/armdroid/compat/: __init__.py  legacy_driver_adapter.py
src/armdroid/config/: loader.py  logging.py  paths.py  schema.py
src/armdroid/control/: __init__.py  controller.py  primitives.py  registry.py  rsl_rl_agent.py  sac_agent.py  trajectory.py
src/armdroid/domain/: __init__.py  errors.py  protocols.py  state.py  units.py
src/armdroid/environments/: __init__.py  _tensor_adapter.py  base.py  curriculum.py  domain_randomizer.py  laundry_sorting.py  registry.py  registry_vec.py  reward_shaping.py  tower_of_hanoi.py
src/armdroid/hardware/: __init__.py  esp32_json_driver.py  mock_arm_driver.py  registry.py  so_arm100_driver.py
src/armdroid/logging/: setup.py
src/armdroid/orchestration/: __init__.py  _driver_kind.py  factory.py  orchestrator.py
src/armdroid/perception/: __init__.py  depth_processor.py  facade.py  object_detector.py  pose_estimator.py  registry.py  state_extractor.py
src/armdroid/planning/: __init__.py  laundry_rules.py  pddl_domain.py  registry.py  replanner.py  symbolic_planner.py
src/armdroid/telemetry/: __init__.py  otel.py
tests/: conftest.py
tests/contract/: test_arm_driver_contract.py
tests/e2e/: test_full_pipeline.py
tests/hardware/: conftest.py  test_esp32_transports.py  test_real_esp32_motion.py  test_real_esp32_protocol_edges.py  test_real_esp32_recovery.py  test_real_esp32_smoke.py
tests/helpers/: __init__.py  fake_isaac_env.py  fake_llm_sdk.py  fake_serial.py  recording_telemetry.py
tests/integration/: test_perception_to_planning.py
tests/integration/hardware/: test_factory_dispatch.py
tests/isaac/: conftest.py  test_smoke_isaac_driver.py  test_smoke_isaac_env.py  test_smoke_isaac_vec_env.py
tests/property/: _vec_invariants.py  test_arm_driver_invariants.py  test_arm_env_invariants.py  test_arm_property.py  test_vec_env_invariants.py
tests/regression/: test_baseline.py  test_detected_object_compat.py  test_entry_point_mirror.py  test_legacy_compat.py  test_public_api_phase_a.py  test_pyproject_isaac_surface.py  test_sim2real_perception_regression.py  test_vec_backwards_compat.py  test_vec_public_api.py  test_yaml_loader_new_sections.py
tests/unit/: conftest.py  test_arm_config.py  test_arm_config_extended.py  test_arm_factory.py  test_config_isaac.py  test_domain_errors.py  test_domain_units.py  test_driver_kind.py  test_fake_llm_sdk_helper.py  test_legacy_driver_adapter.py  test_loader.py  test_logging.py  test_main.py  test_orchestrator.py  test_pra_log_emissions.py  test_protocol_extension.py  test_protocols.py  test_registries_builtin.py  test_registry.py  test_resolve_asset_path.py  test_shim_deprecations.py  test_telemetry_env_spans.py
tests/unit/config/: test_gemini_schema.py
tests/unit/control/: test_controller.py  test_controller_vec_dispatch.py  test_primitives.py  test_primitives_gripper_joint.py  test_rsl_rl_agent_vec.py  test_rsl_rl_ppo_config.py  test_sac_agent.py  test_trajectory.py
tests/unit/domain/: test_arm_action.py  test_new_protocols.py
tests/unit/environments/: test_app_launcher_coord.py  test_curriculum.py  test_domain_randomization_wiring.py  test_domain_randomizer.py  test_env_base.py  test_laundry_sorting_env.py  test_reach_vec_env.py  test_registry_vec.py  test_reward_shaping.py  test_tensor_adapter.py  test_tower_of_hanoi_env.py  test_vec_protocol_surface.py
tests/unit/hardware/: test_esp32_autodetect.py  test_esp32_json_driver.py  test_mock_arm_driver.py  test_mock_arm_driver_modern.py  test_transport_auth.py  test_transport_ble.py  test_transport_factory.py  test_transport_serial.py  test_transport_tcp.py
tests/unit/orchestration/: test_factory_vec_dispatch.py
tests/unit/perception/: test_depth_processor.py  test_object_detector.py  test_perception_facade.py  test_pose_estimator.py  test_state_extractor.py
tests/unit/planning/: test_laundry_rules.py  test_llm_replanner_backoff.py  test_llm_replanner_factory.py  test_llm_replanner_registry.py  test_llm_replanners.py  test_openai_compat_replanner.py  test_pddl_domain.py  test_replanner.py  test_symbolic_planner.py
tests/unit/scripts/: test_calibrate_arm.py  test_gen_firmware_config.py
(+58 files in other folders)
