[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "armdroid"
version = "0.2.0.dev0"
description = "Robot arm manipulation platform — MakerWorld ESP32 arm, MuJoCo, SAC+HER, PDDL planning"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4",
    "pydantic>=2.7",
    "pydantic-settings>=2.7",
    "structlog>=23.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "gymnasium>=0.29",
    "mujoco>=3.2",
    "stable-baselines3>=2.3",
    "pyperplan>=2.0",
    "ultralytics>=8.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
hardware = [
    "pyserial>=3.5",
]
realsense = [
    "pyrealsense2>=2.55",
]
anthropic = [
    "anthropic>=0.40",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.3",
    "pytest-xdist>=3.0",
    "hypothesis>=6.80",
    "ruff==0.15.12",
    "mypy>=1.5",
    "types-PyYAML>=6.0",
]

[project.scripts]
armdroid = "armdroid.main:cli_entry"

# Built-in plugin registrations. These mirror the registrations performed
# at import time inside ``armdroid.<subsystem>.registry`` so that
# ``importlib.metadata.entry_points`` reflects the same surface that
# ``available_<kind>s()`` reports. Out-of-tree packages can declare
# additional entries under the same group names.
[project.entry-points."armdroid.drivers"]
mock = "armdroid.hardware.mock_arm_driver:MockArmDriver"
esp32 = "armdroid.hardware.esp32_json_driver:Esp32JsonDriver"

[project.entry-points."armdroid.planners"]
pyperplan = "armdroid.planning.symbolic_planner:SymbolicPlanner"

[project.entry-points."armdroid.perception_backends"]
default = "armdroid.perception.facade:ArmPerception"

[project.entry-points."armdroid.environments"]
tower_of_hanoi = "armdroid.environments.tower_of_hanoi:TowerOfHanoiEnv"
laundry_sorting = "armdroid.environments.laundry_sorting:LaundrySortingEnv"

[project.entry-points."armdroid.rl_agents"]
sac = "armdroid.control.sac_agent:SACAgent"

[tool.hatch.build.targets.wheel]
packages = ["src/armdroid"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF", "PT",
    "S", "ANN", "D", "T20",
]
ignore = ["D100", "D104", "D107", "D203", "D213", "S101", "ANN401", "TCH", "TC"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "ANN", "S101", "S108", "S603", "S607", "E402"]
"src/armdroid/planning/llm_replanners/**/*.py" = ["D102"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "armdroid.config.schema",
    "armdroid.config.schema.*",
    "armdroid.control.sac_agent",
    "armdroid.perception.object_detector",
    "armdroid.perception.depth_processor",
]
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = ["armdroid.config.schema", "armdroid.config.schema.*"]
disable_error_code = ["arg-type", "call-arg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "hardware: marks tests requiring real hardware (ESP32 + arm wired up)",
    "gpu: marks tests requiring CUDA GPU",
    "regression: marks regression tests guarding existing behaviour against future change",
    "e2e: marks end-to-end pipeline tests (planner -> controller -> driver -> state)",
    "contract: marks driver-protocol contract tests (parametrised over implementations)",
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/armdroid"]
omit = [
    "*/tests/*",
    "*/main.py",
    "*/__main__.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "pass",
    "\\.\\.\\.",
]
