[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "armdroid"
version = "0.2.0.dev0"
description = "Robot arm manipulation platform — MakerWorld ESP32 arm, MuJoCo, SAC+HER, PDDL planning"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.6",
    "pydantic>=2.7",
    "pydantic-settings>=2.7",
    "structlog>=23.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "gymnasium>=0.29",
    "mujoco>=3.2",
    "stable-baselines3>=2.3",
    "pyperplan>=2.0",
    "ultralytics>=8.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
hardware = [
    "pyserial>=3.5",
]
realsense = [
    "pyrealsense2>=2.55",
    "opencv-python>=4.8.0",
]
anthropic = [
    "anthropic>=0.40",
]
# Gemini Robotics ER 1.6 integration (ADRs 0007-0009). Three extras so
# operators can opt into perception/replanner/VLA paths without pulling
# the Live API audio surface, and vice versa. ``google-genai`` is
# pre-1.0 — pin floor only and let the contract tests catch shape drift
# (plan §11 R-G1).
gemini = [
    "google-genai>=0.5",
]
gemini-live = [
    "google-genai>=0.5",
]
gemini-vla = [
    "google-genai>=0.5",
]
telemetry = [
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
]
# NVIDIA Isaac Sim 5.1 / Isaac Lab 2.3.2.post1 backend (PR-B + Blackwell).
# Requires the NVIDIA pip index — install with:
#     pip install -e ".[isaac]" --extra-index-url https://pypi.nvidia.com
# Without the index, ``isaaclab`` fails to resolve because PyPI does not
# host ``isaacsim``. NO torch / torchvision pin here — torch is in base
# [project.dependencies]; isaaclab's transitive resolution handles the
# rest (2.3.2.post1 requires torch>=2.7, which ships sm_120 binary
# kernels needed for Blackwell / RTX 50-series). See docs/GPU_BLACKWELL.md
# for the rationale and supported driver/CUDA matrix.
isaac = [
    "isaaclab[all,isaacsim]==2.3.2.post1",
    "rsl-rl-lib>=2.0",
]
ble = [
    "bleak>=0.22",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.3",
    "pytest-xdist>=3.0",
    "hypothesis>=6.80",
    "ruff==0.15.18",
    # mypy 1.13+ — earlier versions crash with internal AssertionError
    # ("Cannot find module for _frozen_importlib.ModuleSpec") on strict
    # scans of code that calls ``importlib.util.find_spec``. Multiple
    # armdroid modules use that pattern (telemetry/otel.py for the
    # opentelemetry probe, hardware/esp32/transport/ble_transport.py for
    # the bleak probe) so the pin is load-bearing.
    "mypy>=1.13",
    "types-PyYAML>=6.0",
]

[project.scripts]
armdroid = "armdroid.main:cli_entry"

# Built-in plugin registrations. These mirror the registrations performed
# at import time inside ``armdroid.<subsystem>.registry`` so that
# ``importlib.metadata.entry_points`` reflects the same surface that
# ``available_<kind>s()`` reports. Out-of-tree packages can declare
# additional entries under the same group names.
[project.entry-points."armdroid.drivers"]
mock = "armdroid.hardware.mock_arm_driver:MockArmDriver"
esp32 = "armdroid.hardware.esp32:Esp32JsonDriver"
# isaac_sim — requires the [isaac] extra to construct; module imports
# without it but raises ArmDriverError on .connect() when isaaclab is
# missing. Mirrored in armdroid.hardware.registry.
isaac_sim = "armdroid.hardware.isaac_sim:IsaacSimDriver"

[project.entry-points."armdroid.planners"]
pyperplan = "armdroid.planning.symbolic_planner:SymbolicPlanner"

[project.entry-points."armdroid.perception_backends"]
default = "armdroid.perception.facade:ArmPerception"

[project.entry-points."armdroid.environments"]
tower_of_hanoi = "armdroid.environments.tower_of_hanoi:TowerOfHanoiEnv"
laundry_sorting = "armdroid.environments.laundry_sorting:LaundrySortingEnv"
# so_arm_reach_isaac — requires the [isaac] extra; mirrored in
# armdroid.environments.registry.
so_arm_reach_isaac = "armdroid.environments.isaac.reach:SoArmReachIsaacEnv"

[project.entry-points."armdroid.rl_agents"]
sac = "armdroid.control.sac_agent:SACAgent"
# ``sac_her`` matches ArmTrainingConfig.algorithm's default value;
# mirrors the in-code _AGENTS.register("sac_her", SACAgent) alias so
# ``importlib.metadata.entry_points("armdroid.rl_agents")`` reflects the
# same surface that ``available_rl_agents()`` reports.
sac_her = "armdroid.control.sac_agent:SACAgent"
# rsl_rl_ppo — requires the [isaac] extra (rsl-rl-lib). The class is
# registered in armdroid.control.registry so test_entry_point_mirror
# passes, but the orchestrator's build_arm_controller branches
# explicitly on algorithm == "rsl_rl_ppo" to thread cfg.arm_rsl_rl_ppo
# through (the registry's Callable[..., ArmRLAgentProtocol] generic
# can't accommodate dual-config without dropping YAML overlays — see
# ADR-0005 + PR #10 review C-1).
rsl_rl_ppo = "armdroid.control.rsl_rl_agent:RslRlPpoAgent"

[tool.hatch.build.targets.wheel]
packages = ["src/armdroid"]
# Phase F (ADR-0009) will ship ``assets/safety/neiss_corpus.json`` so the
# Asimov-style guard finds its rule corpus inside an installed wheel.
# Declared as a force-include path so the project-root ``assets/`` tree
# (kept out of the package import path for layout clarity) is still
# copied into the wheel under ``armdroid/safety/data/``.
[tool.hatch.build.targets.wheel.force-include]
"assets/safety" = "armdroid/safety/data"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF", "PT",
    "S", "ANN", "D", "T20",
]
ignore = ["D100", "D104", "D107", "D203", "D213", "S101", "ANN401", "TCH", "TC"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "ANN", "S101", "S108", "S603", "S607", "E402"]
"src/armdroid/planning/llm_replanners/**/*.py" = ["D102"]
# Vendored Isaac Lab task code (PR-B) — minimal blast radius; only D
# (pydocstyle: vendored code uses non-Google style), ANN (third-party
# patterns), C901 (RL config complexity), N (PascalCase configs), and
# RUF012 (mutable class defaults common in Isaac Lab dataclasses) are
# disabled. UP/S/B008/T20 stay enabled — they catch real bugs.
# Vendored MuammerBay task code — preserve upstream verbatim. Per-file
# ignore covers lint codes that conflict with upstream's style:
#  D — pydocstyle (Google convention; upstream uses none)
#  ANN — annotations (upstream uses dataclasses heavily)
#  C901 — complexity (RL task configs are intentionally large)
#  N — naming (upstream uses CamelCase classes that armdroid lints
#      against)
#  RUF012 — mutable class defaults (Isaac Lab dataclass pattern)
#  W292 — newline at EOF (upstream files don't always have one)
#  I001 — import sorting (upstream uses an unconventional order)
#  E501 — line length (RL task configs run long; not worth rewrapping)
#  F401 — unused imports (some are re-export side-effects)
#  ARG001/ARG002 — unused arguments (Isaac Lab signature conventions)
#  S101 — assert (used as runtime checks in vendored code)
"src/armdroid/environments/isaac/tasks/**/*.py" = [
    "D", "ANN", "C901", "N", "RUF012", "W292", "I001", "E501", "F401",
    "ARG001", "ARG002", "S101", "B008", "T20", "RUF013", "A001", "A002",
]
# Operator-facing CLI scripts under scripts/ legitimately print to
# stdout (T201), shell out to system tools by partial path (S603/S607
# for nvidia-smi / powershell), and use a single main() entrypoint
# without a docstring on the symbol that already has a module
# docstring (D103).
"scripts/**/*.py" = ["T201", "S603", "S607", "D103"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "armdroid.config.schema",
    "armdroid.config.schema.*",
    "armdroid.control.sac_agent",
    "armdroid.perception.object_detector",
    "armdroid.perception.depth_processor",
]
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = ["armdroid.config.schema", "armdroid.config.schema.*"]
disable_error_code = ["arg-type", "call-arg"]

# Isaac Lab + RSL-RL upstream are not pip-typed; vendored task code uses
# Isaac Lab's ``configclass`` dataclass pattern with ``__post_init__``
# methods that don't carry return-type annotations (upstream style).
# The disable list relaxes the friction points without weakening the
# rest of strict mode.
[[tool.mypy.overrides]]
module = [
    "armdroid.environments.isaac",
    "armdroid.environments.isaac.*",
    "armdroid.hardware.isaac_sim",
    "armdroid.hardware.isaac_sim.*",
    "armdroid.control.rsl_rl_agent",
]
disallow_subclassing_any = false
disallow_untyped_defs = false
disallow_untyped_calls = false
disable_error_code = [
    "import-untyped",
    "no-any-return",
    "attr-defined",
    "no-untyped-def",
    "no-untyped-call",
    "call-arg",
    "operator",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "hardware: marks tests requiring real hardware (ESP32 + arm wired up)",
    "gpu: marks tests requiring CUDA GPU",
    "isaac: marks tests requiring NVIDIA Isaac Sim/Lab installed (env var ARMDROID_ISAAC_RUN=1)",
    "regression: marks regression tests guarding existing behaviour against future change",
    "e2e: marks end-to-end pipeline tests (planner -> controller -> driver -> state)",
    "contract: marks driver-protocol contract tests (parametrised over implementations)",
]
addopts = "-v --tb=short"

[tool.coverage.run]
# Branch coverage in addition to line coverage. Catches missed
# else-branches and short-circuited boolean paths that pure line
# coverage silently lets through. Enabled in Phase A of the Gemini ER
# 1.6 integration as part of the broader tech-debt sweep.
branch = true
source = ["src/armdroid"]
omit = [
    "*/tests/*",
    "*/main.py",
    "*/__main__.py",
    # PR-B placeholders — these modules require the optional ``[isaac]``
    # extra (isaaclab + rsl-rl) which the default CI matrix does not
    # install. Pure-Python siblings (gripper math, config schemas) live
    # outside these directories so they DO get coverage.
    "*/armdroid/environments/isaac/*",
    "*/armdroid/hardware/isaac_sim/driver.py",
    "*/armdroid/hardware/isaac_sim/articulation.py",
    "*/armdroid/control/rsl_rl_agent.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "pass",
    "\\.\\.\\.",
]
